[package]
name = "levels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
rand = "0.8.5"
serde_json = "1"
serde = "1"
serde_derive = "1"

[[bin]]
name = "slow_consumer"

[[bin]]
name = "regular_consumer"

[[bin]]
name = "producer"
